--- a/TodoList/index.html
+++ b/TodoList/index.html
@@ -3,12 +3,41 @@
 <head>
 	<meta charset="utf-8">
 	<title>Todo List</title>
+	<link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 </head>
 <body>
-	<div class="container">
-		
-	</div>
+	<div class="container">  <!-- 总容器开始-->
+		<h1>我的Todo</h1>
+		<div class="add-task">
+			<input type="text">
+			<button>submit</button>
+		</div>
+		<div class="task-list"> <!--清单列表开始-->
+			<span class="task-item">  <!--任务开始-->
+				<span><input type="checkbox"></span>
+				<span class="task-content">item content 1</span>
+				<span>delete</span>
+				<span>detail</span>
+			</span>   <!--任务结束-->
+		</div> <!--清单列表结束-->
+		<div class="task-detail">   <!--任务详情开始-->
+
+			<div class="content"> 	<!--任务标题开始-->
+				
+			</div>  	<!--任务标题结束 -->
+			<div>	<!--任务描述开始 -->
+				<div class="desc">
+					
+				</div>
+			</div>		<!--任务描述结束 -->
+			<div class="remind">	<!--任务定时提醒开始 -->
+				<input type="date">
+				<button type="submit">submit</button>
+			</div>		<!--任务定时提醒结束 -->
+
+		</div>   <!--任务详情结束-->
+	</div> <!--总容器结束-->
 	<script type="node_modules/jquery-3.1.1.mini.js"></script>
 	<script type="js/base.js"></script>
 </body>
